--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
     "common-tags": "^1.4.0",
+    "css-loader": "^0.28.11",
     "eslint": "^3.15.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-html": "^2.0.1",
@@ -72,6 +74,7 @@
     "vue-cli": "^2.8.1",
     "vue-highlightjs": "^1.1.0",
     "vue-loader": "^11.3.4",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^2.3.3"
   },
   "dependencies": {
